# django-pgsignals

./: setup.cfg
src/pgsignals/: __init__.py  apps.py  utils.py
src/pgsignals/management/commands/: runpgsignals.py
