[metadata]
name = pgsignals
description = Allows handle PostgreSQL notifies via listener as regular Django signal.
author = gtors
author-email = andrey.torsunov@gmail.com
license = mit
url = https://github.com/gtors/django-pgsignals/
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires = psycopg2; django-appconf
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    tests

[test]
extras = True

[tool:pytest]
addopts =
    --cov pgsignals --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = false

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = true
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 3.1
package = pgsignals
